--- a/_includes/post-navigation.html
+++ b/_includes/post-navigation.html
@@ -1,24 +1,24 @@
 <div class="post__navigation animate">
-  {% if page.previous.url %}
-  <a class="post__prev" href="{{page.previous.url}}">
-    <div class="prev__image">
-      <img loading="lazy" src="{{site.baseurl}}{{page.previous.image}}" alt="{{ page.title }}">
-    </div>
+  {% if page.next.url %}
+  <a class="post__prev" href="{{page.next.url}}">
     <div class="prev__box">
-      <span class="post__nav post__nav__prev">Prev post</span>
-      <h2 class="post__nav__title">{{page.previous.title}}</h2>
+      <span class="post__nav post__nav__prev">Prev project</span>
+      <h2 class="post__nav__title">{{page.next.title}}</h2>
+    </div>
+    <div class="prev__image">
+      <img loading="lazy" src="{{site.baseurl}}{{page.next.image}}" alt="{{ page.title }}">
     </div>
   </a>
   {% endif %}
 
-  {% if page.next.url %}
-  <a class="post__next" href="{{page.next.url}}">
-    <div class="next__box">
-      <span class="post__nav post__nav__next">Next post</span>
-      <h2 class="post__nav__title">{{page.next.title}}</h2>
-    </div>
+  {% if page.previous.url %}
+  <a class="post__next" href="{{page.previous.url}}">
     <div class="next__image">
-      <img loading="lazy" src="{{site.baseurl}}{{page.next.image}}" alt="{{ page.title }}">
+      <img loading="lazy" src="{{site.baseurl}}{{page.previous.image}}" alt="{{ page.title }}">
+    </div>
+    <div class="next__box">
+      <span class="post__nav post__nav__next">Next project</span>
+      <h2 class="post__nav__title">{{page.previous.title}}</h2>
     </div>
   </a>
   {% endif %}
